# epp-website

./: .env.example  .gitignore  BUSINESS_PLAN_SEED.md  Makefile  PITCH.md  PLAN.md  PREDICTION_METHODS.md  README.md  RESEARCH.md  docker-compose.yml  index.html  pricing_sheets.md  pyproject.toml  unico.html  wrangler.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
api/: worker.js  wrangler.toml
css/: style.css
data/kaggle/: EVALUATION.md
docs/: architecture.md  schema.sql
js/: demo-unico.js  demo.js  mobile-nav.js  tabs.js
src/epp/: __init__.py
src/epp/api/: __init__.py  client.py
src/epp/db/: __init__.py
src/epp/features/: __init__.py
src/epp/ingestion/: __init__.py
src/epp/models/: __init__.py
src/epp/training/: __init__.py
src/epp/utils/: __init__.py
tests/: __init__.py
website/: about.html  contact.html  demo-unico.html  demo.html  index.html  pricing.html  privacy.html  technology.html  terms.html  unico.html
website/css/: demo.css  mobile.css  style.css
website/js/: calculator.js  client-auth.js  contact-modal.js  demo-unico.js  demo.js  savings.js
worker/: wrangler.toml
worker/src/: index.js
