[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-project-predictions"
version = "0.1.0"
description = "AI-powered cost and schedule estimation for construction and engineering companies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "devkit"}
]
keywords = ["machine-learning", "construction", "estimation", "llm", "prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",  # LoRA and parameter-efficient fine-tuning
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # LLM Serving
    "vllm>=0.2.0",
    "accelerate>=0.24.0",

    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",  # Database migrations
    "pgvector>=0.2.0",

    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",  # File uploads
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",  # Password hashing

    # Data Processing
    "openpyxl>=3.1.0",  # Excel files
    "pyarrow>=14.0.0",  # Parquet files
    "python-dateutil>=2.8.0",

    # Orchestration & ML Ops
    "prefect>=2.14.0",
    "mlflow>=2.8.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",  # Retry logic
    "tqdm>=4.66.0",
    "loguru>=0.7.0",

    # Observability
    "prometheus-client>=0.18.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "faker>=20.0.0",  # Generate fake data

    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",

    # Type Stubs
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

gpu = [
    # GPU-specific packages
    "torch>=2.0.0+cu118",
    "triton>=2.1.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
epp-api = "epp.api.main:run"
epp-train = "epp.training.cli:main"
epp-ingest = "epp.ingestion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | models
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["epp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "vllm.*",
    "prefect.*",
    "mlflow.*",
    "xgboost.*",
    "lightgbm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=epp",
    "--cov-report=term-missing:skip-covered",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["src/epp"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
